feat: creating RobotDTOLinksMapper